Fix scene cards height too small for phone

--- a/ui/v2.5/src/index.scss
+++ b/ui/v2.5/src/index.scss
@@ -519,7 +519,7 @@ textarea.text-input {
   width: 320px;
 
   .scene-card-preview {
-    height: 180px;
+    // height: 180px;
   }
 
   .portrait {
